# RGFN

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment_cpu.yml  grid_search.py  install.sh  pyproject.toml  train.py
configs/: retro_chemformer_proxy.gin  retro_dataset_proxy_test.gin  rgfn_base.gin  rgfn_clpp_docking.gin  rgfn_drd2.gin  rgfn_llnl_mpro_proxy.gin  rgfn_mpro_docking.gin  rgfn_seh_docking.gin  rgfn_seh_proxy.gin  rgfn_seh_proxy_with_action_count.gin  rgfn_seh_proxy_with_prior.gin  rgfn_seno_proxy.gin  rgfn_tblr1_docking.gin
configs/envs/: reaction.gin  reaction_docking.gin  retro.gin
configs/loggers/: wandb.gin
configs/objectives/: trajectory_balance.gin
configs/policies/: hypergrid.gin  reaction.gin  reaction_with_rnd.gin
configs/policies/action_embeddings/: fingerprint.gin  gnn.gin  one_hot.gin
configs/policies/exploration/: action_count.gin  exploitation_penalty.gin  exploitation_punishment.gin  none.gin  novelty.gin  novelty_with_uniform.gin  uniform.gin
configs/proxies/: retro_chemformer.gin  retro_rfm.gin
configs/proxies/composed/: novelty.gin  prior.gin
configs/proxies/reaction/: clpp_docking.gin  cryo.gin  llnl_mpro.gin  mpro_docking.gin  seh.gin  seh_docking.gin  seh_with_prior.gin  seno.gin  tblr1_docking.gin
configs/replay_buffers/: reward_prioritized.gin
configs/users/: michal.gin
data/: chemistry.xlsx
data/targets/: ClpP.pdbqt  Mpro.pdbqt  TBLR1.pdbqt  sEH.pdbqt
gflownet/: __init__.py
gflownet/api/: objective_base.py  policy_base.py  proxy_base.py  replay_buffer_base.py  sampler_base.py  trajectories.py
gflownet/common/objectives/: __init__.py  (+2 more)
gflownet/gfns/: __init__.py
gflownet/trainer/: trainer.py
gin_config/: utils.py
rgfn/api/: env_base.py  objective_base.py  policy_base.py  proxy_base.py  replay_buffer_base.py  reward.py  reward_output.py  sampler_base.py  training_hooks_mixin.py  trajectories.py  type_variables.py
rgfn/gfns/: __init__.py
rgfn/shared/: __init__.py
rgfn/trainer/: __init__.py  trainer.py
rgfn/utils/: helpers.py
tests/api/: test_trajectories.py
(+121 files in other folders)
